Initializing Rproj file, plus minor tweaks.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,7 @@ website:
       <a href="mailto:lsbumbul@uwaterloo.ca"><i class="bi bi-envelope"></i></a>
     right:
       - href: https://dajmcdon.github.io/
-        text: "Website theme by Daniel J. McDonald"
+        text: "Website theme © 2025 Daniel J. McDonald, University of British Columbia"
 
 format:
   html:
