Adding non-home pages, plus more tweaks to home page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,20 +5,31 @@ website:
   title: "Laura Bumbulis"
   search: false
   navbar:
+    logo: assets/img/house-icon-blue.png
     search: false
     title: false
     background: light
     collapse: true
     collapse-below: md
+    right:
+      - href: research/index.qmd
+        text: RESEARCH
+      - href: teaching/index.qmd
+        text: TEACHING
+      - href: activities/index.qmd
+        text: ACTIVITIES
+      - href: about/index.qmd
+        text: ABOUT
   page-footer:
     border: false
+    left: "Last updated: October 2025"
     center: |
       <a href="https://www.linkedin.com/in/laura-bumbulis/"><i class="bi bi-linkedin"></i></a>
       <a href="https://orcid.org/0009-0003-8141-9929"><i class="ai ai-orcid"></i></a>
       <a href="mailto:lsbumbul@uwaterloo.ca"><i class="bi bi-envelope"></i></a>
     right:
       - href: https://dajmcdon.github.io/
-        text: "Website theme © 2025 Daniel J. McDonald, University of British Columbia"
+        text: "Website template © 2025 Daniel J. McDonald, University of British Columbia"
 
 format:
   html:
